; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp3.c_unpack_dct_coeffs.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_vp3.c_unpack_dct_coeffs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32*, i32*, i32*, i32*, i32*, i32*, i32*, %struct.TYPE_6__*, i32*, i32, i32** }
%struct.TYPE_6__ = type { i32 }

@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@AV_CODEC_FLAG_GRAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*)* @unpack_dct_coeffs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unpack_dct_coeffs(%struct.TYPE_7__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca [64 x i32*], align 16
  %13 = alloca [64 x i32*], align 16
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 0, i32* %11, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 9
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 10
  %19 = load i32**, i32*** %18, align 8
  %20 = getelementptr inbounds i32*, i32** %19, i64 0
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 0
  store i32 %16, i32* %22, align 4
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @get_bits_left(i32* %23)
  %25 = icmp slt i32 %24, 16
  br i1 %25, label %26, label %28

26:                                               ; preds = %2
  %27 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %27, i32* %3, align 4
  br label %304

28:                                               ; preds = %2
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @get_bits(i32* %29, i32 4)
  store i32 %30, i32* %7, align 4
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @get_bits(i32* %31, i32 4)
  store i32 %32, i32* %8, align 4
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 8
  %37 = load i32*, i32** %36, align 8
  %38 = load i32, i32* %7, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32, i32* %11, align 4
  %42 = call i32 @unpack_vlcs(%struct.TYPE_7__* %33, i32* %34, i32* %40, i32 0, i32 0, i32 %41)
  store i32 %42, i32* %11, align 4
  %43 = load i32, i32* %11, align 4
  %44 = icmp slt i32 %43, 0
  br i1 %44, label %45, label %47

45:                                               ; preds = %28
  %46 = load i32, i32* %11, align 4
  store i32 %46, i32* %3, align 4
  br label %304

47:                                               ; preds = %28
  %48 = load i32*, i32** %5, align 8
  %49 = call i32 @get_bits_left(i32* %48)
  %50 = icmp slt i32 %49, 8
  br i1 %50, label %51, label %53

51:                                               ; preds = %47
  %52 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %52, i32* %3, align 4
  br label %304

53:                                               ; preds = %47
  %54 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 5
  %57 = load i32*, i32** %56, align 8
  %58 = getelementptr inbounds i32, i32* %57, i64 0
  %59 = load i32, i32* %58, align 4
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 4
  %62 = load i32*, i32** %61, align 8
  %63 = getelementptr inbounds i32, i32* %62, i64 0
  %64 = load i32, i32* %63, align 4
  %65 = call i32 @reverse_dc_prediction(%struct.TYPE_7__* %54, i32 0, i32 %59, i32 %64)
  %66 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %67 = load i32*, i32** %5, align 8
  %68 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %69 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %68, i32 0, i32 8
  %70 = load i32*, i32** %69, align 8
  %71 = load i32, i32* %8, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i32, i32* %70, i64 %72
  %74 = load i32, i32* %11, align 4
  %75 = call i32 @unpack_vlcs(%struct.TYPE_7__* %66, i32* %67, i32* %73, i32 0, i32 1, i32 %74)
  store i32 %75, i32* %11, align 4
  %76 = load i32, i32* %11, align 4
  %77 = icmp slt i32 %76, 0
  br i1 %77, label %78, label %80

78:                                               ; preds = %53
  %79 = load i32, i32* %11, align 4
  store i32 %79, i32* %3, align 4
  br label %304

80:                                               ; preds = %53
  %81 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %82 = load i32*, i32** %5, align 8
  %83 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %84 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %83, i32 0, i32 8
  %85 = load i32*, i32** %84, align 8
  %86 = load i32, i32* %8, align 4
  %87 = sext i32 %86 to i64
  %88 = getelementptr inbounds i32, i32* %85, i64 %87
  %89 = load i32, i32* %11, align 4
  %90 = call i32 @unpack_vlcs(%struct.TYPE_7__* %81, i32* %82, i32* %88, i32 0, i32 2, i32 %89)
  store i32 %90, i32* %11, align 4
  %91 = load i32, i32* %11, align 4
  %92 = icmp slt i32 %91, 0
  br i1 %92, label %93, label %95

93:                                               ; preds = %80
  %94 = load i32, i32* %11, align 4
  store i32 %94, i32* %3, align 4
  br label %304

95:                                               ; preds = %80
  %96 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %97 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %96, i32 0, i32 7
  %98 = load %struct.TYPE_6__*, %struct.TYPE_6__** %97, align 8
  %99 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %98, i32 0, i32 0
  %100 = load i32, i32* %99, align 4
  %101 = load i32, i32* @AV_CODEC_FLAG_GRAY, align 4
  %102 = and i32 %100, %101
  %103 = icmp ne i32 %102, 0
  br i1 %103, label %139, label %104

104:                                              ; preds = %95
  %105 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %106 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %107 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %106, i32 0, i32 6
  %108 = load i32*, i32** %107, align 8
  %109 = getelementptr inbounds i32, i32* %108, i64 1
  %110 = load i32, i32* %109, align 4
  %111 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %112 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %111, i32 0, i32 5
  %113 = load i32*, i32** %112, align 8
  %114 = getelementptr inbounds i32, i32* %113, i64 1
  %115 = load i32, i32* %114, align 4
  %116 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %117 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %116, i32 0, i32 4
  %118 = load i32*, i32** %117, align 8
  %119 = getelementptr inbounds i32, i32* %118, i64 1
  %120 = load i32, i32* %119, align 4
  %121 = call i32 @reverse_dc_prediction(%struct.TYPE_7__* %105, i32 %110, i32 %115, i32 %120)
  %122 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %123 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %124 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %123, i32 0, i32 6
  %125 = load i32*, i32** %124, align 8
  %126 = getelementptr inbounds i32, i32* %125, i64 2
  %127 = load i32, i32* %126, align 4
  %128 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %129 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %128, i32 0, i32 5
  %130 = load i32*, i32** %129, align 8
  %131 = getelementptr inbounds i32, i32* %130, i64 1
  %132 = load i32, i32* %131, align 4
  %133 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %134 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %133, i32 0, i32 4
  %135 = load i32*, i32** %134, align 8
  %136 = getelementptr inbounds i32, i32* %135, i64 1
  %137 = load i32, i32* %136, align 4
  %138 = call i32 @reverse_dc_prediction(%struct.TYPE_7__* %122, i32 %127, i32 %132, i32 %137)
  br label %139

139:                                              ; preds = %104, %95
  %140 = load i32*, i32** %5, align 8
  %141 = call i32 @get_bits_left(i32* %140)
  %142 = icmp slt i32 %141, 8
  br i1 %142, label %143, label %145

143:                                              ; preds = %139
  %144 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %144, i32* %3, align 4
  br label %304

145:                                              ; preds = %139
  %146 = load i32*, i32** %5, align 8
  %147 = call i32 @get_bits(i32* %146, i32 4)
  store i32 %147, i32* %9, align 4
  %148 = load i32*, i32** %5, align 8
  %149 = call i32 @get_bits(i32* %148, i32 4)
  store i32 %149, i32* %10, align 4
  store i32 1, i32* %6, align 4
  br label %150

150:                                              ; preds = %172, %145
  %151 = load i32, i32* %6, align 4
  %152 = icmp sle i32 %151, 5
  br i1 %152, label %153, label %175

153:                                              ; preds = %150
  %154 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %155 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %154, i32 0, i32 3
  %156 = load i32*, i32** %155, align 8
  %157 = load i32, i32* %9, align 4
  %158 = sext i32 %157 to i64
  %159 = getelementptr inbounds i32, i32* %156, i64 %158
  %160 = load i32, i32* %6, align 4
  %161 = sext i32 %160 to i64
  %162 = getelementptr inbounds [64 x i32*], [64 x i32*]* %12, i64 0, i64 %161
  store i32* %159, i32** %162, align 8
  %163 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %164 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %163, i32 0, i32 3
  %165 = load i32*, i32** %164, align 8
  %166 = load i32, i32* %10, align 4
  %167 = sext i32 %166 to i64
  %168 = getelementptr inbounds i32, i32* %165, i64 %167
  %169 = load i32, i32* %6, align 4
  %170 = sext i32 %169 to i64
  %171 = getelementptr inbounds [64 x i32*], [64 x i32*]* %13, i64 0, i64 %170
  store i32* %168, i32** %171, align 8
  br label %172

172:                                              ; preds = %153
  %173 = load i32, i32* %6, align 4
  %174 = add nsw i32 %173, 1
  store i32 %174, i32* %6, align 4
  br label %150

175:                                              ; preds = %150
  store i32 6, i32* %6, align 4
  br label %176

176:                                              ; preds = %198, %175
  %177 = load i32, i32* %6, align 4
  %178 = icmp sle i32 %177, 14
  br i1 %178, label %179, label %201

179:                                              ; preds = %176
  %180 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %181 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %180, i32 0, i32 2
  %182 = load i32*, i32** %181, align 8
  %183 = load i32, i32* %9, align 4
  %184 = sext i32 %183 to i64
  %185 = getelementptr inbounds i32, i32* %182, i64 %184
  %186 = load i32, i32* %6, align 4
  %187 = sext i32 %186 to i64
  %188 = getelementptr inbounds [64 x i32*], [64 x i32*]* %12, i64 0, i64 %187
  store i32* %185, i32** %188, align 8
  %189 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %190 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %189, i32 0, i32 2
  %191 = load i32*, i32** %190, align 8
  %192 = load i32, i32* %10, align 4
  %193 = sext i32 %192 to i64
  %194 = getelementptr inbounds i32, i32* %191, i64 %193
  %195 = load i32, i32* %6, align 4
  %196 = sext i32 %195 to i64
  %197 = getelementptr inbounds [64 x i32*], [64 x i32*]* %13, i64 0, i64 %196
  store i32* %194, i32** %197, align 8
  br label %198

198:                                              ; preds = %179
  %199 = load i32, i32* %6, align 4
  %200 = add nsw i32 %199, 1
  store i32 %200, i32* %6, align 4
  br label %176

201:                                              ; preds = %176
  store i32 15, i32* %6, align 4
  br label %202

202:                                              ; preds = %224, %201
  %203 = load i32, i32* %6, align 4
  %204 = icmp sle i32 %203, 27
  br i1 %204, label %205, label %227

205:                                              ; preds = %202
  %206 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %207 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %206, i32 0, i32 1
  %208 = load i32*, i32** %207, align 8
  %209 = load i32, i32* %9, align 4
  %210 = sext i32 %209 to i64
  %211 = getelementptr inbounds i32, i32* %208, i64 %210
  %212 = load i32, i32* %6, align 4
  %213 = sext i32 %212 to i64
  %214 = getelementptr inbounds [64 x i32*], [64 x i32*]* %12, i64 0, i64 %213
  store i32* %211, i32** %214, align 8
  %215 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %216 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %215, i32 0, i32 1
  %217 = load i32*, i32** %216, align 8
  %218 = load i32, i32* %10, align 4
  %219 = sext i32 %218 to i64
  %220 = getelementptr inbounds i32, i32* %217, i64 %219
  %221 = load i32, i32* %6, align 4
  %222 = sext i32 %221 to i64
  %223 = getelementptr inbounds [64 x i32*], [64 x i32*]* %13, i64 0, i64 %222
  store i32* %220, i32** %223, align 8
  br label %224

224:                                              ; preds = %205
  %225 = load i32, i32* %6, align 4
  %226 = add nsw i32 %225, 1
  store i32 %226, i32* %6, align 4
  br label %202

227:                                              ; preds = %202
  store i32 28, i32* %6, align 4
  br label %228

228:                                              ; preds = %250, %227
  %229 = load i32, i32* %6, align 4
  %230 = icmp sle i32 %229, 63
  br i1 %230, label %231, label %253

231:                                              ; preds = %228
  %232 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %233 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %232, i32 0, i32 0
  %234 = load i32*, i32** %233, align 8
  %235 = load i32, i32* %9, align 4
  %236 = sext i32 %235 to i64
  %237 = getelementptr inbounds i32, i32* %234, i64 %236
  %238 = load i32, i32* %6, align 4
  %239 = sext i32 %238 to i64
  %240 = getelementptr inbounds [64 x i32*], [64 x i32*]* %12, i64 0, i64 %239
  store i32* %237, i32** %240, align 8
  %241 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %242 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %241, i32 0, i32 0
  %243 = load i32*, i32** %242, align 8
  %244 = load i32, i32* %10, align 4
  %245 = sext i32 %244 to i64
  %246 = getelementptr inbounds i32, i32* %243, i64 %245
  %247 = load i32, i32* %6, align 4
  %248 = sext i32 %247 to i64
  %249 = getelementptr inbounds [64 x i32*], [64 x i32*]* %13, i64 0, i64 %248
  store i32* %246, i32** %249, align 8
  br label %250

250:                                              ; preds = %231
  %251 = load i32, i32* %6, align 4
  %252 = add nsw i32 %251, 1
  store i32 %252, i32* %6, align 4
  br label %228

253:                                              ; preds = %228
  store i32 1, i32* %6, align 4
  br label %254

254:                                              ; preds = %300, %253
  %255 = load i32, i32* %6, align 4
  %256 = icmp sle i32 %255, 63
  br i1 %256, label %257, label %303

257:                                              ; preds = %254
  %258 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %259 = load i32*, i32** %5, align 8
  %260 = load i32, i32* %6, align 4
  %261 = sext i32 %260 to i64
  %262 = getelementptr inbounds [64 x i32*], [64 x i32*]* %12, i64 0, i64 %261
  %263 = load i32*, i32** %262, align 8
  %264 = load i32, i32* %6, align 4
  %265 = load i32, i32* %11, align 4
  %266 = call i32 @unpack_vlcs(%struct.TYPE_7__* %258, i32* %259, i32* %263, i32 %264, i32 0, i32 %265)
  store i32 %266, i32* %11, align 4
  %267 = load i32, i32* %11, align 4
  %268 = icmp slt i32 %267, 0
  br i1 %268, label %269, label %271

269:                                              ; preds = %257
  %270 = load i32, i32* %11, align 4
  store i32 %270, i32* %3, align 4
  br label %304

271:                                              ; preds = %257
  %272 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %273 = load i32*, i32** %5, align 8
  %274 = load i32, i32* %6, align 4
  %275 = sext i32 %274 to i64
  %276 = getelementptr inbounds [64 x i32*], [64 x i32*]* %13, i64 0, i64 %275
  %277 = load i32*, i32** %276, align 8
  %278 = load i32, i32* %6, align 4
  %279 = load i32, i32* %11, align 4
  %280 = call i32 @unpack_vlcs(%struct.TYPE_7__* %272, i32* %273, i32* %277, i32 %278, i32 1, i32 %279)
  store i32 %280, i32* %11, align 4
  %281 = load i32, i32* %11, align 4
  %282 = icmp slt i32 %281, 0
  br i1 %282, label %283, label %285

283:                                              ; preds = %271
  %284 = load i32, i32* %11, align 4
  store i32 %284, i32* %3, align 4
  br label %304

285:                                              ; preds = %271
  %286 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %287 = load i32*, i32** %5, align 8
  %288 = load i32, i32* %6, align 4
  %289 = sext i32 %288 to i64
  %290 = getelementptr inbounds [64 x i32*], [64 x i32*]* %13, i64 0, i64 %289
  %291 = load i32*, i32** %290, align 8
  %292 = load i32, i32* %6, align 4
  %293 = load i32, i32* %11, align 4
  %294 = call i32 @unpack_vlcs(%struct.TYPE_7__* %286, i32* %287, i32* %291, i32 %292, i32 2, i32 %293)
  store i32 %294, i32* %11, align 4
  %295 = load i32, i32* %11, align 4
  %296 = icmp slt i32 %295, 0
  br i1 %296, label %297, label %299

297:                                              ; preds = %285
  %298 = load i32, i32* %11, align 4
  store i32 %298, i32* %3, align 4
  br label %304

299:                                              ; preds = %285
  br label %300

300:                                              ; preds = %299
  %301 = load i32, i32* %6, align 4
  %302 = add nsw i32 %301, 1
  store i32 %302, i32* %6, align 4
  br label %254

303:                                              ; preds = %254
  store i32 0, i32* %3, align 4
  br label %304

304:                                              ; preds = %303, %297, %283, %269, %143, %93, %78, %51, %45, %26
  %305 = load i32, i32* %3, align 4
  ret i32 %305
}

declare dso_local i32 @get_bits_left(i32*) #1

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i32 @unpack_vlcs(%struct.TYPE_7__*, i32*, i32*, i32, i32, i32) #1

declare dso_local i32 @reverse_dc_prediction(%struct.TYPE_7__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
